[package]
name = "ecat-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argh = "0.1.13"
ethercrab = { git = "https://github.com/ethercrab-rs/ethercrab", branch = "master" }
nom = "7.1.3"
signal-hook = "0.3.17"
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
